--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.7.1",
+    "cordova-android": "8.1.0",
     "cordova-ios": "5.1.1",
     "cordova-plugin-actionsheet": "^2.3.3",
     "cordova-plugin-dialogs": "^2.0.2",
@@ -32,7 +33,6 @@
     "lodash": "^4.17.15",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
-    "uk.co.workingedge.phonegap.plugin.launchnavigator": "^5.0.4",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
@@ -78,11 +78,12 @@
       "cordova-plugin-ionic-webview": {},
       "cordova-plugin-ionic-keyboard": {},
       "uk.co.workingedge.phonegap.plugin.launchnavigator": {
-        "LOCATION_USAGE_DESCRIPTION": "This app requires access to your location for navigation purposes"
+        "GOOGLE_API_KEY_FOR_ANDROID": "AIzaSyCPEzh2eXckLN3oo6y4UJViRAj2BDY5Bro"
       }
     },
     "platforms": [
-      "ios"
+      "ios",
+      "android"
     ]
   }
 }
