--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.7.1",
+    "@ionic/storage": "^2.2.0",
     "cordova-android": "8.1.0",
     "cordova-ios": "5.1.1",
     "cordova-plugin-actionsheet": "^2.3.3",
     "cordova-plugin-dialogs": "^2.0.2",
+    "cordova-sqlite-storage": "^4.0.0",
     "core-js": "^2.5.4",
     "lodash": "^4.17.15",
     "rxjs": "~6.5.1",
@@ -79,7 +81,8 @@
       "cordova-plugin-ionic-keyboard": {},
       "uk.co.workingedge.phonegap.plugin.launchnavigator": {
         "GOOGLE_API_KEY_FOR_ANDROID": "AIzaSyCPEzh2eXckLN3oo6y4UJViRAj2BDY5Bro"
-      }
+      },
+      "cordova-sqlite-storage": {}
     },
     "platforms": [
       "ios",
